Fix about us overlapping text

--- a/client/src/components/css/AboutUs.css
+++ b/client/src/components/css/AboutUs.css
@@ -1,6 +1,6 @@
 .rectangleImageAbout {
-    width: 600px;
-    height: 350px;
+    width: 100%;
+    height: 300px;
     border: solid 1px #979797;
     background-color: #d8d8d8;
 }
@@ -9,27 +9,20 @@
     height: 50%;
     border: solid 1px #979797;
     background-color: #222222;
-    margin:auto;
+    /* margin:auto; */
     overflow:hidden;
     text-align:center;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .left {
-    float: left;
-}
-
-.right {
-    float: right;
-}
-
-.rectangleBackgroundAbout > div {
-    margin: 2%;
-    padding: 20px;
-    max-width: 40%; /* because margin is 2%, we have 2 divs, so (100% - 2*2%)/2 = 46% */
+    width: 80%;
 }
 
 /* Import Roboto font */
